--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svite-template-tauri-routify-ts",
+  "name": "time",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -11,23 +11,19 @@
     "build:routify": "routify run -b",
     "build:vite": "vite build",
     "build:tauri": "tauri build",
-    "serve": "vite preview",
-    "validate": "svelte-check",
+    "preview": "vite preview",
     "tauri": "tauri",
     "tauri-dev": "run-p dev:routify dev:vite dev:tauri",
     "tauri-build": "run-s build:routify build:vite build:tauri"
   },
-  "dependencies": {
-    "@roxi/routify": "^2.18.4",
-    "@tauri-apps/api": "^1.0.0-beta.8"
-  },
   "devDependencies": {
+    "@roxi/routify": "^2.18.4",
+    "@tauri-apps/api": "^1.0.0-beta.8",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.35",
     "@tauri-apps/cli": "^1.0.0-beta.10",
     "@tsconfig/svelte": "^2.0.1",
     "npm-run-all": "^4.1.5",
     "svelte": "^3.46.2",
-    "svelte-check": "^2.3.0",
     "svelte-preprocess": "^4.10.2",
     "tslib": "^2.3.1",
     "typescript": "^4.5.5",
