Revert "chore: update sites"
This reverts commit 2d7518708ee1ccc93952c22b74abdfb42a0ca10c.

--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "site": "run-p dev:routify dev:vite",
-    "tauri": "tauri dev",
+    "dev": "run-p dev:routify dev:vite",
     "dev:routify": "routify run",
     "dev:vite": "vite",
     "dev:tauri": "tauri dev",
@@ -12,9 +11,10 @@
     "build:routify": "routify run -b",
     "build:vite": "vite build",
     "build:tauri": "tauri build",
-    "preview": "run-s build preview:*",
-    "preview:site": "npm run b",
-    "preview:tauri": "tauri"
+    "preview": "vite preview",
+    "tauri": "tauri",
+    "tauri-dev": "run-p dev:routify dev:vite dev:tauri",
+    "tauri-build": "run-s build:routify build:vite build:tauri"
   },
   "devDependencies": {
     "@roxi/routify": "^2.18.4",
