--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tauri-apps/api": "^1.0.0-beta.8",
     "@tauri-apps/cli": "^1.0.0-beta.10",
     "@tsconfig/svelte": "^2.0.1",
+    "ghostsui": "^1.2.0",
     "npm-run-all": "^4.1.5",
     "svelte": "^3.46.3",
     "svelte-preprocess": "^4.10.2",
