--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "npm-run-all": "^4.1.5",
     "sass": "^1.49.0",
     "svelte": "^3.46.3",
+    "svelte-local-storage-store": "^0.2.6",
     "svelte-preprocess": "^4.10.2",
     "tslib": "^2.3.1",
     "typescript": "^4.5.5",
