--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tauri-apps/cli": "^1.0.0-beta.10",
     "@tsconfig/svelte": "^2.0.1",
     "ghostsui": "^1.2.0",
+    "nanoid": "^3.2.0",
     "npm-run-all": "^4.1.5",
     "sass": "^1.49.0",
     "svelte": "^3.46.3",
